--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
   <modules>
     <module>qop-account</module>
     <module>qop-dao</module>
+    <module>qop-questionnaire</module>
+    <module>qop-analysis</module>
+    <module>qop-group</module>
+    <module>qop-common</module>
+    <module>qop-gateway</module>
   </modules>
 
   <packaging>pom</packaging>
@@ -20,7 +25,10 @@
     <spring.version>2.3.2.RELEASE</spring.version>
     <lombok.version>1.18.18</lombok.version>
     <mysql.version>8.0.23</mysql.version>
+    <cloud.version>Hoxton.SR8</cloud.version>
     <cloud.alibaba.version>2.2.5.RELEASE</cloud.alibaba.version>
+    <swagger.version>2.9.2</swagger.version>
+    <fastjson.version>1.2.75</fastjson.version>
   </properties>
 
   <dependencyManagement>
@@ -39,6 +47,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 
       <dependency>
         <groupId>org.projectlombok</groupId>
@@ -49,6 +64,21 @@
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>${mysql.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>${fastjson.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
