--- a/qop-questionnaire/pom.xml
+++ b/qop-questionnaire/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>qop-account</artifactId>
+  <artifactId>qop-questionnaire</artifactId>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
