--- a/qop-account/pom.xml
+++ b/qop-account/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     <dependency>
       <groupId>cn.edu.zucc</groupId>
+      <artifactId>qop-service</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.edu.zucc</groupId>
       <artifactId>qop-common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
@@ -47,6 +52,10 @@
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
