--- a/qop-analysis/pom.xml
+++ b/qop-analysis/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     <dependency>
       <groupId>cn.edu.zucc</groupId>
+      <artifactId>qop-service</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.edu.zucc</groupId>
       <artifactId>qop-common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
@@ -47,10 +52,6 @@
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
