--- a/qop-questionnaire/pom.xml
+++ b/qop-questionnaire/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     <dependency>
       <groupId>cn.edu.zucc</groupId>
+      <artifactId>qop-service</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.edu.zucc</groupId>
       <artifactId>qop-common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
