--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
     <module>qop-gateway</module>
     <module>qop-service</module>
   </modules>
-
   <packaging>pom</packaging>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <spring.version>2.3.2.RELEASE</spring.version>
@@ -77,4 +77,14 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.version}</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
