--- a/qop-account/pom.xml
+++ b/qop-account/pom.xml
@@ -19,7 +19,7 @@
   <dependencies>
     <dependency>
       <groupId>cn.edu.zucc</groupId>
-      <artifactId>qop-dao</artifactId>
+      <artifactId>qop-entity</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -56,6 +56,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
