--- a/qop-group/pom.xml
+++ b/qop-group/pom.xml
@@ -19,7 +19,7 @@
   <dependencies>
     <dependency>
       <groupId>cn.edu.zucc</groupId>
-      <artifactId>qop-dao</artifactId>
+      <artifactId>qop-entity</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
