--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <cloud.version>Hoxton.SR8</cloud.version>
     <cloud.alibaba.version>2.2.5.RELEASE</cloud.alibaba.version>
     <swagger.version>2.9.2</swagger.version>
+    <apache.commons.version>3.11</apache.commons.version>
   </properties>
 
   <dependencyManagement>
@@ -75,6 +76,11 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
         <version>${swagger.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${apache.commons.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
