--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <cloud.alibaba.version>2.2.5.RELEASE</cloud.alibaba.version>
     <swagger.version>2.9.2</swagger.version>
     <apache.commons.version>3.11</apache.commons.version>
+    <jwt.version>3.13.0</jwt.version>
   </properties>
 
   <dependencyManagement>
@@ -81,6 +82,11 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${apache.commons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.auth0</groupId>
+        <artifactId>java-jwt</artifactId>
+        <version>${jwt.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
