--- a/qop-common/pom.xml
+++ b/qop-common/pom.xml
@@ -44,5 +44,9 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+    </dependency>
   </dependencies>
 </project>
