--- a/qop-account/pom.xml
+++ b/qop-account/pom.xml
@@ -40,6 +40,10 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
