--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <swagger.version>2.9.2</swagger.version>
     <apache.commons.version>3.11</apache.commons.version>
     <jwt.version>3.13.0</jwt.version>
+    <minio.version>8.2.1</minio.version>
   </properties>
 
   <dependencyManagement>
@@ -87,6 +88,11 @@
         <groupId>com.auth0</groupId>
         <artifactId>java-jwt</artifactId>
         <version>${jwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.minio</groupId>
+        <artifactId>minio</artifactId>
+        <version>${minio.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
