--- a/qop-common/pom.xml
+++ b/qop-common/pom.xml
@@ -52,5 +52,9 @@
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.minio</groupId>
+      <artifactId>minio</artifactId>
+    </dependency>
   </dependencies>
 </project>
