--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <apache.commons.version>3.11</apache.commons.version>
     <jwt.version>3.13.0</jwt.version>
     <minio.version>8.2.1</minio.version>
+    <maven-plugin.version>3.2.0</maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -114,6 +115,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>${maven-plugin.version}</version>
         <configuration>
           <delimiters>@</delimiters>
           <useDefaultDelimiters>false</useDefaultDelimiters>
